--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -174,6 +174,7 @@
   "tokenIndex": "Token Index",
   "tokenIndexes": "Token Indexes",
   "tokenPool": "Token Pool",
+  "tokenPoolContractInterfaceHelperText": "The FireFly Interface for a custom token contract. Use \"Automatic\" for built-in contracts.",
   "tokenPoolAddressHelperText": "The address of an existing token contract, if supported by the token connector.",
   "tokenPoolConfirmed": "Token Pool Confirmed",
   "tokenPoolFailed": "Token Pool Failed",
