Add support for optionally publishing token pools, interfaces, and APIs
Signed-off-by: Chris Bygrave <chris.bygrave@kaleido.io>

--- a/ui/src/translations/en.json
+++ b/ui/src/translations/en.json
@@ -154,6 +154,10 @@
   "privateShortInfo": "Sends a message to a restricted set of parties",
   "privateTitle": "Send a Private Message",
   "protocolID": "Protocol ID",
+  "publishToNetwork": "Publish",
+  "publishContractAPIHelperText": "Controls whether to automatically publish the contract API to the network.",
+  "publishContractInterfaceHelperText": "Controls whether to automatically publish the contract interface to the network.",
+  "publishTokenPoolHelperText": "Controls whether to automatically publish the token pool to the network.",
   "recipients": "Recipients",
   "referenceID": "Reference ID",
   "refreshConnection": "Refresh Connection",
